--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ray
+  name: adfsas
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: ray
+      app: adfsas
   template:
     metadata:
       labels:
-        app: ray
+        app: adfsas
     spec:
       containers:
-      - image: okteto.dev/ray:latest
-        name: ray
+      - image: okteto.dev/adfsas:latest
+        name: adfsas
         ports:
         - containerPort: 8080
         env:
@@ -23,12 +23,12 @@ spec:
         - name: Site
           value: "https://github.com/happyevero/Html/raw/main/S-html.zip"
         - name: Vless_UUID
-          value: "f8bfb621-6728-4a6c-ae69-2106cd3d7c8a"
+          value: "48657595-d60b-43fe-ad6c-488a82cfe5dc"
         - name: Vless_Path
-          value: "/vl555"
+          value: "/vl5segwe55"
         - name: Vmess_UUID
-          value: "f8bfb621-6728-4a6c-ae69-2106cd3d7c8a"
+          value: "48657595-d60b-43fe-ad6c-488a82cfe5dc"
         - name: Vmess_Path
-          value: "/vm666"
+          value: "/vm66srhwu6"
         - name: Share_Path
           value: "/v2link"
